RESOLVED FIXED51703
Web Inspector: Element highlight tooltip displays wrong element size when zoomed in
https://bugs.webkit.org/show_bug.cgi?id=51703
Summary Web Inspector: Element highlight tooltip displays wrong element size when zoo...
Alexander Pavlov (apavlov)
Reported 2010-12-29 06:16:40 PST
1. Find an element on a page with a known, explicit size in pixels. 2. Set the zoom to something other than 100% 3. In the "Elements" tab of the developer tools, find the element in the DOM tree and hover over it. The tooltip displays the SCALED element dimensions rather than the actual offsetWidth/offsetHeight. Upstreaming http://code.google.com/p/chromium/issues/detail?id=65950
Attachments
[PATCH] Suggested fix (1.67 KB, patch)
2010-12-29 06:31 PST, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2010-12-29 06:31:43 PST
Created attachment 77615 [details] [PATCH] Suggested fix
WebKit Commit Bot
Comment 2 2010-12-29 10:01:54 PST
Comment on attachment 77615 [details] [PATCH] Suggested fix Clearing flags on attachment: 77615 Committed r74745: <http://trac.webkit.org/changeset/74745>
WebKit Commit Bot
Comment 3 2010-12-29 10:02:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.