2010-12-29  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: Element highlight tooltip displays wrong element size when zoomed in
        https://bugs.webkit.org/show_bug.cgi?id=51703

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::drawElementTitle):

Canonical link: https://commits.webkit.org/65084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74745 268f45cc-cd09-0410-ab3c-d52691b4dbfc